crates/oxc_react_compiler/tests/snapshots/const-propagation-into-function-expression-global.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/const-propagation-into-function-expression-global.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	const getJSX = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = getJSX();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const result = t0;
	return result;
}
function _temp() {
	return <Child x={GLOBAL_IS_X} />;
}
