crates/oxc_react_compiler/tests/snapshots/const-propagation-into-function-expression-primitive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/const-propagation-into-function-expression-primitive.js
---
function foo() {
	const f = _temp;
	f();
	return 42;
}
function _temp() {
	console.log(42);
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
