crates/oxc_react_compiler/tests/snapshots/constant-computed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-computed.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.foo) {
		x = {};
		x["foo"] = x["foo"] + x["bar"];
		x["foo"](props.foo);
		$[0] = props.foo;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
