crates/oxc_react_compiler/tests/snapshots/constant-prop-across-objectmethod-def.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-prop-across-objectmethod-def.js
---
import { identity } from "shared-runtime";
// repro for context identifier scoping bug, in which x was
// inferred as a context variable.
function Component() {
	const obj = { method() {} };
	identity(obj);
	return 4;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
