crates/oxc_react_compiler/tests/snapshots/constant-prop-colliding-identifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-prop-colliding-identifier.js
---
import { invoke } from "shared-runtime";
function Component() {
	const fn = _temp;
	invoke(fn);
	return 3;
}
function _temp() {
	return { x: "value" };
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
