crates/oxc_react_compiler/tests/snapshots/constant-prop-to-object-method.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-prop-to-object-method.js
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function Foo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const x = { foo() {
			return identity(1);
		} };
		t0 = x.foo();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
