crates/oxc_react_compiler/tests/snapshots/constant-propagate-global-phis-constant.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagate-global-phis-constant.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_STRING0, Text } from "shared-runtime";
function useFoo() {
	"use no forget";
	return { tab: CONST_STRING0 };
}
function Test() {
	const $ = _c(1);
	const { tab } = useFoo();
	tab === CONST_STRING0 ? CONST_STRING0 : CONST_STRING0;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Text value={CONST_STRING0} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Test,
	params: [],
	isComponent: true
};
