crates/oxc_react_compiler/tests/snapshots/constant-propagate-global-phis.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagate-global-phis.js
---
import { c as _c } from "react/compiler-runtime";
import { CONST_STRING0, CONST_STRING1, Text } from "shared-runtime";
function useFoo() {
	"use no forget";
	return { tab: CONST_STRING1 };
}
function Test() {
	const $ = _c(2);
	const { tab } = useFoo();
	const currentTab = tab === CONST_STRING0 ? CONST_STRING0 : CONST_STRING1;
	let t0;
	if ($[0] !== currentTab) {
		t0 = <Text value={currentTab} />;
		$[0] = currentTab;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Test,
	params: [],
	isComponent: true
};
