crates/oxc_react_compiler/tests/snapshots/constant-propagation-bit-ops.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/constant-propagation-bit-ops.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function foo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify value={[
			123,
			0,
			123,
			123,
			123,
			123,
			123,
			1,
			122,
			246,
			61,
			61,
			9,
			15.588457268119896,
			12.25,
			3.3219970854839125,
			0,
			1.5,
			1,
			.5
		]} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
